--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -1,3 +1,23 @@
-{{ page_elements }}
+{{# {{ page_elements }}
   {{ partial:elements }}
-{{ /page_elements }}
+{{ /page_elements }} #}}
+<header class="mb-50">
+  {{ partial:icons/logo class="w-auto h-50" }}
+</header>
+<div class="mb-50">
+  <p>Seit über 50 Jahren bieten wir das gesamte Spektrum des modernen Modellbaus und verbinden handwerkliches Geschick mit Leidenschaft und Effizienz. Von der optimalen Darstellung über die passende Materialwahl bis zum effizienten Herstellungsprozess sind wir Ihr zuverlässiger Partner für Komplettlösungen, sei es für Architektur- und Designmodelle, Prototypen, Einzelstücke oder hochwertige Beschriftungen.</p>
+  <p>Derzeit überarbeiten wir unseren Unternehmensauftritt, unsere neue Website ist ab Herbst 2024 online.</p>
+</div>
+<footer class="font-cadiz-semibold">
+  <div class="md:hidden">
+    Knecht Modellbau AG<br>
+    Jurastrasse 58<br>
+    CH-5430 Wettingen<br>
+    info@knechtmodellbau.ch<br>
+    +41 56 426 09 31
+  </div>
+  <div class="hidden md:block">
+    Knecht Modellbau AG, Jurastrasse 58, CH-5430 Wettingen<br>
+    info@knechtmodellbau.ch, +41 56 426 09 31
+  </div>
+</footer> 
