--- a/resources/css/typo/webfonts.css
+++ b/resources/css/typo/webfonts.css
@@ -4,17 +4,17 @@
  */
 
 @font-face {
-  font-family: 'GT-Alpina-Standard-Regular';
-  src: url('fonts/GT-Alpina-Standard-Regular.woff2') format('woff2'), url('fonts/GT-Alpina-Standard-Regular.woff') format('woff');
+  font-family: 'cadiz-book';
+  src: url('fonts/Cadiz-Book.woff2') format('woff2'), url('fonts/Cadiz-Book.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'GT-Alpina-Standard-Light';
-  src: url('fonts/GT-Alpina-Standard-Light.woff2') format('woff2'), url('fonts/GT-Alpina-Standard-Light.woff') format('woff');
-  font-weight: 300;
+  font-family: 'cadiz-semibold';
+  src: url('fonts/Cadiz-SemiBold.woff2') format('woff2'), url('fonts/Cadiz-SemiBold.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
