--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,6 +1,4 @@
 <body 
-  class="antialiased leading-[1.25] text-black flex min-h-screen flex-col {{ css_class ?? '' }}">
-  {{ slot:header }}
+  class="antialiased leading-[1.35] font-cadiz-book text-black text-sm md:text-md flex min-h-screen flex-col p-30 md:py-35 md:px-36 lg:p-30 {{ css_class ?? '' }}">
   {{ slot }}
-  {{ slot:footer }}
 </body>
