--- a/resources/views/partials/layout/debug.antlers.html
+++ b/resources/views/partials/layout/debug.antlers.html
@@ -7,13 +7,19 @@
   <span class="hidden xl:block 2xl:hidden">xl</span>
   <span class="hidden 2xl:block 3xl:hidden">2xl</span>
 </div>
-<div class="fixed left-20 xl:left-0 top-20 w-[calc(100%_-_40px)] xl:w-full z-[-1] pointer-events-none">
-  <div class="max-w-8xl mx-auto xl:px-20 md:grid md:grid-cols-6 md:gap-x-20 w-full">
-    <div class="md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
-    <div class="hidden md:block md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
-    <div class="hidden md:block md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
-    <div class="hidden md:block md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
-    <div class="hidden md:block md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
-    <div class="hidden md:block md:col-span-1 bg-orange-50 bg-opacity-50 min-h-[calc(100vh_-_40px)]"></div>
+<div class="fixed left-30 md:left-36 lg:left-30 top-30 md:top-35 lg:top-30 w-[calc(100%_-_60px)] md:w-[calc(100%_-_72px)] lg:w-[calc(100%_-_60px)] z-[-1] pointer-events-none">
+  <div class="max-w-8xl mx-auto md:grid md:grid-cols-12 md:gap-x-20 w-full">
+    <div class="md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
+    <div class="hidden md:block md:col-span-1 bg-orange-50 min-h-screen"></div>
   </div>
 </div>
