--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,4 +1,7 @@
 <body 
-  class="antialiased leading-[1.35] font-cadiz-book text-black text-sm md:text-md flex min-h-screen flex-col p-30 md:py-35 md:px-36 lg:p-30 {{ css_class ?? '' }}">
+  class="antialiased leading-[1.35] lg:leading-[1.45] font-cadiz-book text-black text-sm md:text-md flex min-h-screen flex-col px-30 md:px-36 lg:px-30 {{ css_class ?? '' }}">
   {{ slot }}
 </body>
+{{ vite src="resources/js/app.js" }}
+</body>
+</html>
