--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -1,23 +1,46 @@
 {{# {{ page_elements }}
   {{ partial:elements }}
 {{ /page_elements }} #}}
-<header class="mb-50">
-  {{ partial:icons/logo class="w-auto h-50" }}
-</header>
-<div class="mb-50">
-  <p>Seit über 50 Jahren bieten wir das gesamte Spektrum des modernen Modellbaus und verbinden handwerkliches Geschick mit Leidenschaft und Effizienz. Von der optimalen Darstellung über die passende Materialwahl bis zum effizienten Herstellungsprozess sind wir Ihr zuverlässiger Partner für Komplettlösungen, sei es für Architektur- und Designmodelle, Prototypen, Einzelstücke oder hochwertige Beschriftungen.</p>
-  <p>Derzeit überarbeiten wir unseren Unternehmensauftritt, unsere neue Website ist ab Herbst 2024 online.</p>
+
+<div class="md:grid md:grid-cols-12 md:gap-x-20">
+  <div class="md:col-span-11 lg:col-span-6 md:col-start-2 lg:min-h-[calc(100vh_-_60px)] lg:flex lg:flex-col lg:justify-between">
+    <div>
+      <header class="mb-75 lg:mb-120">
+        {{ partial:icons/logo class="w-auto h-50" }}
+      </header>
+      <div class="mb-50 md:mb-40 lg:mb-30 lg:max-w-[620px] hyphens-auto">
+        <p>Seit über 50 Jahren bieten wir das gesamte Spektrum des modernen Modellbaus und verbinden handwerkliches Geschick mit Leidenschaft und Effizienz. Von der optimalen Darstellung über die passende Materialwahl bis zum effizienten Herstellungsprozess sind wir Ihr zuverlässiger Partner für Komplettlösungen, sei es für Architektur- und Designmodelle, Prototypen, Einzelstücke oder hochwertige Beschriftungen.</p>
+        <p>Derzeit überarbeiten wir unseren Unternehmensauftritt, unsere neue Website ist ab Herbst 2024 online.</p>
+      </div>
+      <div class="md:min-h-[620px] mb-50 md:mb-40 lg:hidden">
+        {{ partial:swiper/wrapper }}
+          {{ partial:swiper/slide image="knecht_modellbau_00" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_01" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_02" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_03" alt="" }}
+        {{ /partial:swiper/wrapper }}
+      </div>
+    </div>
+    <address class="font-cadiz-semibold not-italic">
+      <div class="md:hidden">
+        Knecht Modellbau AG<br>
+        Jurastrasse 58<br>
+        CH-5430 Wettingen<br>
+        info@knechtmodellbau.ch<br>
+        +41 56 426 09 31
+      </div>
+      <div class="hidden md:block">
+        Knecht Modellbau AG, Jurastrasse 58, CH-5430 Wettingen<br>
+        info@knechtmodellbau.ch, +41 56 426 09 31
+      </div>
+    </address> 
+  </div>
+  <div class="min-h-200 hidden lg:block lg:col-span-5 md:!col-start-8">
+    {{ partial:swiper/wrapper }}
+      {{ partial:swiper/slide image="knecht_modellbau_00" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_01" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_02" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_03" alt="" }}
+    {{ /partial:swiper/wrapper }}
+  </div>
 </div>
-<footer class="font-cadiz-semibold">
-  <div class="md:hidden">
-    Knecht Modellbau AG<br>
-    Jurastrasse 58<br>
-    CH-5430 Wettingen<br>
-    info@knechtmodellbau.ch<br>
-    +41 56 426 09 31
-  </div>
-  <div class="hidden md:block">
-    Knecht Modellbau AG, Jurastrasse 58, CH-5430 Wettingen<br>
-    info@knechtmodellbau.ch, +41 56 426 09 31
-  </div>
-</footer> 
