--- a/resources/views/partials/layout/main.antlers.html
+++ b/resources/views/partials/layout/main.antlers.html
@@ -1,3 +1,3 @@
-<main role="main" class="w-full flex-grow relative">
+<main role="main" class="w-full flex-grow py-30 md:py-35 lg:py-30 relative">
   {{ template_content }}
 </main>
