--- a/resources/views/partials/swiper/wrapper.antlers.html
+++ b/resources/views/partials/swiper/wrapper.antlers.html
@@ -1,7 +1,19 @@
-<div class="swiper">
+<div class="swiper js-swiper-landing">
   <div class="swiper-wrapper">
     {{ slot }}
   </div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
+  <a 
+    href="javascript:;" 
+    class="js-swiper-landing-prev absolute z-90 top-1/2 -translate-y-1/2 left-20">
+    <svg width="14" height="25" viewBox="0 0 14 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M12.5 25L13.6 23.9L2.10001 12.5L13.6 1.10001L12.5 0L0 12.5L12.5 25Z" fill="black"/>
+    </svg>
+  </a>
+  <a 
+    href="javascript:;" 
+    class="js-swiper-landing-next absolute z-90 top-1/2 -translate-y-1/2 right-20">
+    <svg width="14" height="25" viewBox="0 0 14 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M1.10001 25L0 23.9L11.5 12.5L0 1.10001L1.10001 0L13.6 12.5L1.10001 25Z" fill="black"/>
+    </svg>
+  </a>
 </div>
