--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -26,12 +26,13 @@
         Knecht Modellbau AG<br>
         Jurastrasse 58<br>
         CH-5430 Wettingen<br>
-        info@knechtmodellbau.ch<br>
-        +41 56 426 09 31
+        <a href="mailto:info@knechtmodellbau.ch">info@knechtmodellbau.ch</a><br>
+        <a href="tel:+41 56 426 09 31">+41 56 426 09 31</a>
       </div>
       <div class="hidden md:block">
         Knecht Modellbau AG, Jurastrasse 58, CH-5430 Wettingen<br>
-        info@knechtmodellbau.ch, +41 56 426 09 31
+        <a href="mailto:info@knechtmodellbau.ch">info@knechtmodellbau.ch</a>, 
+        <a href="tel:+41 56 426 09 31">+41 56 426 09 31</a>
       </div>
     </address> 
   </div>
