--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -18,6 +18,9 @@
           {{ partial:swiper/slide image="knecht_modellbau_01" alt="" }}
           {{ partial:swiper/slide image="knecht_modellbau_02" alt="" }}
           {{ partial:swiper/slide image="knecht_modellbau_03" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_04" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_05" alt="" }}
+          {{ partial:swiper/slide image="knecht_modellbau_06" alt="" }}
         {{ /partial:swiper/wrapper }}
       </div>
     </div>
@@ -42,6 +45,9 @@
       {{ partial:swiper/slide image="knecht_modellbau_01" alt="" }}
       {{ partial:swiper/slide image="knecht_modellbau_02" alt="" }}
       {{ partial:swiper/slide image="knecht_modellbau_03" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_04" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_05" alt="" }}
+      {{ partial:swiper/slide image="knecht_modellbau_06" alt="" }}
     {{ /partial:swiper/wrapper }}
   </div>
 </div>
