--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -8,7 +8,7 @@
       <header class="mb-75 lg:mb-120">
         {{ partial:icons/logo class="w-auto h-50" }}
       </header>
-      <div class="mb-50 md:mb-40 lg:mb-30 lg:max-w-[620px] hyphens-auto">
+      <div class="mb-50 md:mb-40 lg:mb-30 lg:max-w-[620px] hyphens-auto lg:hyphens-none">
         <p>Seit über 50 Jahren bieten wir das gesamte Spektrum des modernen Modellbaus und verbinden handwerkliches Geschick mit Leidenschaft und Effizienz. Von der optimalen Darstellung über die passende Materialwahl bis zum effizienten Herstellungsprozess sind wir Ihr zuverlässiger Partner für Komplettlösungen, sei es für Architektur- und Designmodelle, Prototypen, Einzelstücke oder hochwertige Beschriftungen.</p>
         <p>Derzeit überarbeiten wir unseren Unternehmensauftritt, unsere neue Website ist ab Herbst 2024 online.</p>
       </div>
@@ -28,18 +28,18 @@
       <div class="md:hidden">
         Knecht Modellbau AG<br>
         Jurastrasse 58<br>
-        CH-5430 Wettingen<br>
+        5430 Wettingen<br>
         <a href="mailto:info@knechtmodellbau.ch" class="hover:underline underline-offset-2 decoration-2">info@knechtmodellbau.ch</a><br>
         <a href="tel:+41 56 426 09 31" class="hover:underline underline-offset-2 decoration-2">+41 56 426 09 31</a>
       </div>
       <div class="hidden md:block">
-        Knecht Modellbau AG, Jurastrasse 58, CH-5430 Wettingen<br>
+        Knecht Modellbau AG, Jurastrasse 58, 5430&nbsp;Wettingen<br>
         <a href="mailto:info@knechtmodellbau.ch" class="md:hover:underline md:underline-offset-2 md:decoration-2">info@knechtmodellbau.ch</a>, 
         <a href="tel:+41 56 426 09 31" class="md:hover:underline md:underline-offset-2 md:decoration-2">+41 56 426 09 31</a>
       </div>
     </address> 
   </div>
-  <div class="min-h-200 hidden lg:block lg:col-span-5 md:!col-start-8">
+  <div class="min-h-200 hidden lg:block lg:col-span-5 md:!col-start-8 lg:pb-5">
     {{ partial:swiper/wrapper }}
       {{ partial:swiper/slide image="knecht_modellbau_00" alt="" }}
       {{ partial:swiper/slide image="knecht_modellbau_01" alt="" }}
