--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -3,7 +3,7 @@
 {{ /page_elements }} #}}
 
 <div class="md:grid md:grid-cols-12 md:gap-x-20">
-  <div class="md:col-span-10 lg:col-span-6 md:col-start-2 lg:min-h-[calc(100vh_-_60px)] lg:flex lg:flex-col lg:justify-between">
+  <div class="md:col-span-10 lg:col-span-6 md:!col-start-2 lg:min-h-[calc(100vh_-_60px)] lg:flex lg:flex-col lg:justify-between">
     <div>
       <header class="mb-75 lg:mb-120">
         {{ partial:icons/logo class="w-auto h-50" }}
